# painful-testing

./: Cargo.toml  DEVELOPMENT.md  DEV_NOTES.md  README.md  flake.nix
opensearch/: opensearch-cluster.yml
src/: cli.rs  docker.rs  lib.rs  main.rs  opensearch_util.rs  painless.rs
