[package]
name = "painful-testing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bollard = "0.15.0"
clap = { version = "4.4.12", features = ["derive"] }
tokio = { version = "1.35.1", features = ["fs", "rt-multi-thread", "macros"] }
